fixing 'HOW?' not showing options -type in .ts file and .scss file. Also, upload the .html that accidentally got removed.

--- a/weekone/Angular/conFusion/src/app/contact/contact.component.scss
+++ b/weekone/Angular/conFusion/src/app/contact/contact.component.scss
@@ -1,11 +1,11 @@
 .full-width {
-    width: 95%;
+    width: 95%
 }
 
 .half-width {
-    width: 45%;
+    width: 45%
 }
 
-.font-size {
-    width: 75%;
+.form-size {
+    width: 75%
 }
